application/test/deployment_caturday_jace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-caturday
spec:
  replicas: 5
  selector:
    matchLabels:
      app: test-caturday
  template:
    metadata:
      labels:
        app: test-caturday
    spec:
      containers:
      - name: caturday
        image: quay.io/rhn_support_jaliang/caturday:latest
